<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context=".MainActivity"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/nameID"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/heightID"
            android:layout_width="218dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/teal_200"
            android:hint="@string/Text1"
            android:textStyle="bold">

        </EditText>

        <RadioGroup
            android:id="@+id/radiogroupID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radiobutton1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/Text3"
                android:textColor="@color/white"
                android:textStyle="bold">

            </RadioButton>

            <RadioButton
                android:id="@+id/radiobutton2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/Text4"
                android:textColor="@color/white"
                android:textStyle="bold">

            </RadioButton>

        </RadioGroup>


    </LinearLayout>

    <EditText
        android:id="@+id/weightID"
        android:layout_width="218dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_200"
        android:hint="@string/Text2"
        android:textStyle="bold">

    </EditText>

    <Button
        android:id="@+id/calculatebuttonID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="claculateFunction"
        android:text="@string/Text5"
        android:textSize="20sp"
        android:textStyle="bold">

    </Button>

    <TextView
        android:id="@+id/BMIviewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="#89D332"
        android:text="@string/Text6"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold">

    </TextView>


</LinearLayout>